--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,26 @@
-spring.security.basic.enabled = false
-spring.security.ignored=/**
+spring.security.user.name= admin
+spring.security.user.password= admin
+ 
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+ 
+application.start.url=http://localhost:8080
 
- spring.security.user.name= admin
- spring.security.user.password= admin
+ 
+ 
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2_console
+# Datasource
+#spring.datasource.url=jdbc:h2:file:~/h2/miyabarimosque
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/regis?createDatabaseIfNotExist=true&useSSL=false&autoReconnect=true
+spring.datasource.username =root
+spring.datasource.password=1234
+
+
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql=true
